Bug 119685 - gtk3_kde5's filepicker may cause UI freeze
Summary: gtk3_kde5's filepicker may cause UI freeze
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: medium major
Assignee: Michael Weghorn
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords:
: 119784 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-04 08:43 UTC by Michael Weghorn
Modified: 2018-09-10 13:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB backtrace of the state when the UI is "freezed" (15.01 KB, text/plain)
2018-09-04 08:44 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2018-09-04 08:43:01 UTC
Version: 6.2.0.0.alpha0+
Build ID: f7c37579e6c348ec8d48ddbfb26e08ac09a8eeba
CPU threads: 4; OS: Linux 4.17; UI render: default; VCL: gtk3_kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: threaded

Steps to reproduce:

1) start LibreOffice Writer with the "gtk3_kde5" VCL plugin, command:

SAL_USE_VCLPLUGIN=gtk3_kde5 ./instdir/program/soffice --writer

2) Save the document using "File" -> "Save as"

3) repeat step 2, changing file name and storage location, until the issue appears

(Unfortunately, I haven't found any better steps to reliably trigger the issue yet.)

Result:

At some point in time, the "Save as" dialog disappears, but the window showing the document is unresponsive, appears "freezed".

Looking at running processes on the system reveals that "instdir/program/lo_kde5filepicker" is still running (which is probably also the reason why the main UI is "frozen").
Comment 1 Michael Weghorn 2018-09-04 08:44:30 UTC
Created attachment 144655 [details]
GDB backtrace of the state when the UI is "freezed"
Comment 2 Katarina Behrens (Inactive) 2018-09-04 11:02:06 UTC
Some Linux distros confirm e.g. 

https://bugs.archlinux.org/task/59839
https://bugs.gentoo.org/657236

but IDK if that is a sufficient condition to set the bug to confirmed here as well
Comment 3 Julien Nabet 2018-09-04 13:12:21 UTC
Xisco: considering these elements:
- we got a bt from Michael
- Michael worked on this part (see https://cgit.freedesktop.org/libreoffice/core/commit/?id=f971bdb026735fdecd777d0d2edc515124f9e822) and so knows what he's talking about
- bugs reported from external bugtrackers quoted by Katarina
- perhaps very few people use gtk3-kde5 since quite recent so less feedback

would it be ok to set the status to NEW here even if nobody has confirmed yet?
Comment 4 Buovjaga 2018-09-05 09:27:46 UTC
A single other confirmation is enough -> NEW
Comment 5 Michael Weghorn 2018-09-05 09:43:52 UTC
I'm currently trying to further analyze this.
Comment 6 Michael Weghorn 2018-09-05 17:02:14 UTC
Gerrit change: https://gerrit.libreoffice.org/#/c/60047/
Comment 7 Commit Notification 2018-09-06 06:30:12 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f5698ba8b62e62999b0efb363916a91bdd54c94

tdf#119685 Fix infinite loop in gtk3_kde5 filepicker

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2018-09-06 09:46:41 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0e98d9a75952116655fa90d83478c2be323fff64&h=libreoffice-6-1

tdf#119685 Fix infinite loop in gtk3_kde5 filepicker

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Katarina Behrens (Inactive) 2018-09-10 13:51:31 UTC
*** Bug 119784 has been marked as a duplicate of this bug. ***